<resources>
    <string name="app_name">WeatherApp</string>
    <string name="enterCity">Введите город: </string>
    <string name="moscow">Москва</string>
    <string name="getWeather">Узнать погоду</string>
    <string name="temperature">Температура: </string>
    <string name="temperature_feels">Ощущается: </string>
    <string name="weatherIconDescription">Иконка погоды</string>
    <string name="history">История</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="deleteButtonText">X</string>
    <string name="location_permission_description">Для запроса погоды по текущему местоположению необходимо разрешение</string>
</resources>