<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherFragmentLayout"
    tools:context=".WeatherFragment">

    <data>
        <variable
            name="weather"
            type="com.example.weatherapp.weatherapi.models.Weather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/temperatureValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.current.temperature.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/temperatureTextView"
            app:layout_constraintEnd_toEndOf="@+id/getCurrentWeatherButton"
            app:layout_constraintStart_toEndOf="@+id/temperatureTextView"
            app:layout_constraintTop_toTopOf="@+id/temperatureTextView" />

        <TextView
            android:id="@+id/temperatureFeelsValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.current.feelslike.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/temperatureFeelsTextView"
            app:layout_constraintEnd_toEndOf="@+id/temperatureValueTextView"
            app:layout_constraintStart_toStartOf="@+id/temperatureValueTextView"
            app:layout_constraintTop_toTopOf="@+id/temperatureFeelsTextView" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/temperature"
            app:layout_constraintEnd_toEndOf="@+id/cityNameText"
            app:layout_constraintStart_toStartOf="@+id/cityNameText"
            app:layout_constraintTop_toBottomOf="@+id/cityNameText" />

        <TextView
            android:id="@+id/temperatureFeelsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/temperature_feels"
            app:layout_constraintEnd_toEndOf="@+id/temperatureTextView"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="45dp"
            android:layout_height="52dp"
            android:contentDescription="@string/weatherIconDescription"
            app:layout_constraintBottom_toBottomOf="@+id/temperatureFeelsTextView"
            app:layout_constraintEnd_toStartOf="@+id/getCurrentWeatherButton"
            app:layout_constraintStart_toStartOf="@+id/getCurrentWeatherButton"
            app:layout_constraintTop_toTopOf="@+id/temperatureTextView"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/cityNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.location.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getCurrentWeatherButton"
            app:layout_constraintVertical_bias="0.068" />

        <TextView
            android:id="@+id/enterCityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/enterCity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/enterCityEdit"
            app:layout_constraintEnd_toStartOf="@+id/enterCityEdit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enterCityEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/moscow"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterCityText"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/getCurrentWeatherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/getWeather"
            app:backgroundTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterCityEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>